# uroman

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  README.rst  README.txt  acknowledgement.md  how-to-release.md  pyproject.toml  requirements.txt  setup.py  uroman.ipynb
data/: Chinese_to_Pinyin.txt  ISO-639-3-list.txt  Scripts.txt  UnicodeData.txt  UnicodeDataOverwrite.txt  UnicodeDataProps.txt  UnicodeDataPropsCJK.txt  UnicodeDataPropsHangul.txt  romanization-table-arabic-block.txt  romanization-table.txt  romanization-table.v1.2.1.txt
lib/: JSON.pm
lib/JSON/: backportPP.pm
lib/JSON/backportPP/: Boolean.pm  Compat5005.pm  Compat5006.pm
lib/NLP/: Chinese.pm  English.pm  Romanizer.pm  UTF8.pm  stringDistance.pm  utilities.pm
test/: multi-script.txt  multi-script.uroman-ref-perl.txt  multi-script.uroman-ref.txt  string-similarity-test-input.txt  string-similarity-test-output-ref.txt
text/: amh.txt  ara.txt  ben.txt  bod.txt  egy.txt  ell.txt  fas.txt  heb.txt  hin.txt  jpn.txt  kor.txt  mar.txt  multiple.txt  mya.txt  nep.txt  rus.txt  tam.txt  tha.txt  tlh.txt  tur.txt  tzm.txt  uig.txt  zho.txt
uroman/: __init__.py  __main__.py  uroman-quick.pl  uroman-tsv.sh  uroman.pl  uroman.py
uroman/data/: ISO-639-3-list.txt  NumProps.jsonl  Scripts.txt  UnicodeDataProps.txt  romanization-auto-table.txt  romanization-table-arabic-block.txt  string-distance-cost-rules.txt
uroman/data-aux/: NumPropsRejects.jsonl
uroman/mini-test/: line_with_non_utf8.txt  multi-script.txt  multi-script.uroman-ref.txt
